--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8,10 +8,10 @@ body{
     position: absolute;
     bottom: 0;
     left: 0;
-    width: 98.7%;
+    width: 100%;
     height: 100px;
     background-color: deepskyblue;
-    border: 10px inset #1a202c;
+    border: 4px inset #1a202c;
 }
 
 .window_entry{
@@ -26,11 +26,18 @@ body{
     border-radius: 5px;
 }
 
-.my_button{
-    position: relative;
+.my_button_server{
+    position: absolute;
     margin: auto;
-    top: 150px;
-    left: 30%;
+    top: 50px;
+    left: 120px;
+    background-color: floralwhite;
+    border: 2px inset black;
+    border-radius: 5px;
+}
+
+.my_button{
+    position: absolute;
     background-color: floralwhite;
     border: 2px inset black;
     border-radius: 5px;
@@ -42,5 +49,12 @@ body{
     left: 30px;
     top: 50%;
 }
+
+.my_form{
+    position: absolute;
+    margin: auto;
+    top: 100px;
+}
+
 
 
