--- a/public/css/app.css
+++ b/public/css/app.css
@@ -56,5 +56,18 @@ body{
     top: 100px;
 }
 
+.window{
+    position: absolute;
+    background-color: lightpink;
+    width: 500px;
+    height: 200px;
+    left: 1000px;
+    top: 210px;
+    border: 5px solid blue;
+    border-radius: 5px;
+    overflow-y: auto;
+}
 
-
+th{
+    border-bottom: 5px solid red;
+}
