Создал бд. Работаю с выводом. Пока что ничего не запускается. Если не получится пофиксить то проблема в windiws. Если что просто заткнуть его чем нибудь

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -108,3 +108,11 @@ th{
     border-radius: 5px;
     left: 0;
 }
+
+.exit_button{
+    position: absolute;
+    top: 520px;
+    right: 30px;
+    border: 2px inset black;
+    border-radius: 5px;
+}
